Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gfan0.4plus.tar.gz": e8e3f2c2f730c88d0c556f5b0fdf3a99b66b9bac
+  gfan0.5.tar.gz: ba4f3e4fac6bcafdfdd2244329d925e958d9ee63
